--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "antd": "^3.7.0",
+    "echarts": "^4.1.0",
+    "echarts-for-react": "^2.0.13",
     "js-cookie": "^2.2.0",
     "monaco-editor": "0.13.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-markdown": "^3.3.4",
+    "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
