--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "antd": "^3.7.0",
+    "connected-react-router": "^4.3.0",
     "echarts": "^4.1.0",
     "echarts-for-react": "^2.0.13",
+    "enzyme": "^3.3.0",
     "js-cookie": "^2.2.0",
+    "memoize-one": "^4.0.0",
     "monaco-editor": "0.13.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -14,7 +17,10 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
