--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "enzyme": "^3.3.0",
     "js-cookie": "^2.2.0",
     "memoize-one": "^4.0.0",
+    "moment": "^2.22.2",
     "monaco-editor": "0.13.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
