--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "antd": "^3.8.0",
+    "babel-core": "^6.26.3",
+    "babel-plugin-transform-decorators": "^6.24.1",
     "connected-react-router": "^4.3.0",
     "echarts": "^4.1.0",
     "echarts-for-react": "^2.0.13",
