--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.22.2",
     "monaco-editor": "0.13.1",
     "react": "^16.4.1",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-markdown": "^3.3.4",
     "react-redux": "^5.0.7",
