--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "antd": "^3.8.0",
     "babel-core": "^6.26.3",
     "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "chai": "^4.1.2",
     "connected-react-router": "^4.3.0",
     "echarts": "^4.1.0",
     "echarts-for-react": "^2.0.13",
@@ -34,5 +36,13 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.8.0"
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ],
+    "plugins": [
+      "transform-decorators-legacy"
+    ]
   }
 }
