--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "memoize-one": "^4.0.0",
     "moment": "^2.22.2",
     "monaco-editor": "0.13.1",
+    "monaco-editor-webpack-plugin": "^1.5.1",
     "react": "^16.4.1",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.4.1",
