--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-core": "^6.26.3",
     "babel-plugin-transform-decorators": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "buffer": "^5.2.1",
     "chai": "^4.1.2",
     "connected-react-router": "^4.3.0",
     "echarts": "^4.1.0",
@@ -25,9 +26,11 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-simplemde-editor": "^3.6.16",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "simplemde": "^1.11.2"
   },
   "scripts": {
     "start": "react-scripts start",
